--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>3D Hartwig chess set in HTML/CSS/JS</title>
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,900' rel='stylesheet' type='text/css'>
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
     <script src="js/prefixfree.min.js"></script>
@@ -333,7 +332,6 @@
         <div id="promotion"></div>
       </div>
     </div>
-    <script src="js/libraries.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/scripts.min.js"></script>
   </body>
 </html>
